registration form creation

--- a/dvlmntCT02/cThinkerRegistrationForm/index.html
+++ b/dvlmntCT02/cThinkerRegistrationForm/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coding Thinker Registration Form</title>
+  <link rel="icon" href="Coding_Thinker_Logo-removebg-preview.png">
 </head>
+
 <body>
-  
+  <h2>Welcome To Coding Thinker</h2>
+  <form action="">
+    <fieldset>
+      <legend>Registration Form</legend>
+      Name : <input type="text" placeholder="Enter Name"> <br><br>
+      Father's Name : <input type="text" placeholder="Enter Your Father's Name"> <br><br>
+      Mother's Name : <input type="text" placeholder="Enter Your Mother's Name"> <br><br>
+      DOB : <input type="date"><br><br>
+      Gender : <input type="radio" name="gender"> Male <input type="radio" name="gender"> Female <br><br>
+      Mobile Number : <input type="number" placeholder="Enter Your Number"><br><br>
+      Skill : 1. Programming Language : <input type="checkbox"> CPP <input type="checkbox"> Java <br><br>
+      2. Developer Tools : <input type="checkbox"> Github <input type="checkbox"> VS code <br> <br>
+      Description : <input type="text" placeholder="Tell about yourself"> <br><br>
+      Photo Upload : <input type="file"> <br><br>
+      Resume Upload : <input type="file"> <br> <br>
+    </fieldset>
+  </form>
+
+  <h3> Testimonial Video</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Gx5qb1uHss4?si=16tXaGKZddA7PcNy"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br><br>
+  <h3> Find Us</h3>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14665.06799475485!2d77.42165658715818!3d23.233369200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c4385f0e2c06d%3A0xe7e270912927c8c4!2sCoding%20Thinker%20-%20Best%20Coding%20Institute%20%26%20Classes%20in%20Bhopal!5e0!3m2!1sen!2sin!4v1731404302799!5m2!1sen!2sin"
+    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
+
 </html>
