added Link to connect home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h2>Home</h2>
-  <link rel="stylesheet" href="dvlmntCT03/cThinkerRegistrationForm/index.html">
+  <a href="dvlmntCT03/cThinkerRegistrationForm/index.html">
+    <button>Go To Home</button>
+  </a>
 </body>
 </html>
