--- a/dvlmntCT03/cThinkerRegistrationForm/index.html
+++ b/dvlmntCT03/cThinkerRegistrationForm/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="Coding_Thinker_Logo-removebg-preview.png">
 </head>
 
-<body>
-  <h2>Welcome To Coding Thinker</h2>
-   <form action="">
+<body style="background-color: black;">
+  <h2 style="color: aqua;">Welcome To Coding Thinker</h2>
+   <form action="" style="color: white;">
     <fieldset>
       <legend>Registration Form</legend>
       Name : <input type="text" placeholder="Enter Your Name"> <br><br>
@@ -26,6 +26,10 @@
     </fieldset>
    </form>
    <hr>
+   <a href="payment.html">
+    <input type="submit">
+   </a> 
+   <br><br>
    <a href="testimonial.html">
     <button style="font-size: larger;">Testimonial Video</button>
    </a>
