--- a/dvlmntCT14/index.html
+++ b/dvlmntCT14/index.html
@@ -56,11 +56,11 @@
     </div>
   </div>
   <script>
-     let inputText = document.getElementById("input-text");
+     let inputText = document.getElementById("input-text");''
      let imageQr = document.getElementById("imgqr")
 
      function generateQr() {
-        imageQr.src = "https://api.qrserver.com/v1/create-qr-code/?size=300x300&data="+inputText.value;
+        imageQr.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data="+inputText.value;
      }
   </script>
 </body>
