--- a/dvlmntCT15/index.html
+++ b/dvlmntCT15/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>String</title>
+  <title>Anagram</title>
 </head>
 <body>
   
+  <script>
+     let str1 = 'aman';
+     let str2 = 'aamn';
+
+     if(str1.split('').sort().join('') === str2.split('').sort().join('')) console.log(true);
+     else console.log(false);
+  </script>
 </body>
 </html>
