--- a/dvlmntCT21/voiceGenerator.html
+++ b/dvlmntCT21/voiceGenerator.html
@@ -16,6 +16,7 @@
   <div
     style="display: flex; height: 100vh; align-items: center; justify-content: center; flex-direction: column; background-color: rgb(189, 224, 255);"
     class="container">
+    <h1 style="font-family: Arial; color: brown;">Text to voice</h1>
     <div class="box"
       style="width: 540px; padding: 30px; height: auto; background-color: aliceblue; display: flex; flex-direction: column; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
       <textarea id="text" style="height: 210px;" name="" id=""></textarea>
