advanced function completed

--- a/dvlmntCT22/advanced.html
+++ b/dvlmntCT22/advanced.html
@@ -12,7 +12,7 @@
     const radius = [1, 2, 3, 4, 5];
 
     const area = function (radius) {
-      return Math.PI * radius * radius;
+      return Math.ceil(Math.PI * radius * radius);
     };
 
     const diameter = function (radius) {
