--- a/dvlmntCT22/index.html
+++ b/dvlmntCT22/index.html
@@ -12,48 +12,48 @@
 
   <script>
 
-    // const radius = [1, 2, 3, 4];
+    const radius = [1, 2, 3, 4];
 
-    //  const diameter = (radius) => {
-    //     return 2*radius;
-    //  }
+    const diameter = (radius) => {
+      return 2 * radius;
+    }
 
-    //  const area = (radius) => {
-    //   return Math.PI *radius*radius;
-    //  }
+    const area = (radius) => {
+      return Math.ceil(Math.PI * radius * radius);
+    }
 
-    //  const calculate = (radius, logic) => {
+    const calculate = (radius, logic) => {
+      const output = [];
+      for (let i = 0; i < radius.length; i++) {
+        output.push(logic(radius[i]))
+      }
+      return output;
+    }
+
+    console.log(calculate(radius, diameter));
+    console.log(calculate(radius, area));
+
+    // const radius = [1, 2, 3, 4, 5];
+
+    // const diameter = function (radius) {
     //   const output = [];
-    //     for(let i = 0; i < radius.length; i++) {
-    //         output.push(diameter(radius[i]))
-    // output.push(area(radius[i]))
-    //     }
-    //     return output;
-    //  }
 
-    //  console.log(calculate(radius, diameter));
+    //   for (let i = 0; i < radius.length; i++) {
+    //     output.push(2 * radius[i])
+    //   }
+    //   return output;
+    // }
 
-    const radius = [1, 2, 3, 4, 5];
+    // const area = function (radius) {
+    //   const output = [];
+    //   for (let i = 0; i < radius.length; i++) {
+    //     output.push(Math.PI * radius[i] * radius[i])
+    //   }
+    //   return output;
+    // }
 
-    const diameter = function (radius) {
-      const output = [];
-
-      for (let i = 0; i < radius.length; i++) {
-        output.push(2 * radius[i])
-      }
-      return output;
-    }
-
-    const area = function (radius) {
-      const output = [];
-      for (let i = 0; i < radius.length; i++) {
-        output.push(Math.PI * radius[i] * radius[i])
-      }
-      return output;
-    }
-
-    console.log(diameter(radius))
-    console.log(area(radius))
+    // console.log(diameter(radius))
+    // console.log(area(radius))
 
   </script>
 </body>
